# space-invaders

./: .gitignore  CMakeLists.txt  LICENSE  README.md  export-linux.sh  export-windows.nsis  vcpkg.json
res/linux/: SpaceInvaders.desktop
res/windows/: resource.rc
src/: Game.c  Game.h  Global.h
src/classes/: Bullet.c  Bullet.h  BulletList.c  BulletList.h  Bullets.c  Bullets.h  BurstAttack.c  BurstAttack.h  Enemies.c  Enemies.h  EnemiesList.c  EnemiesList.h  Enemy.c  Enemy.h  GroupAttack.c  GroupAttack.h  HUD.c  HUD.h  Player.c  Player.h  Score.c  Score.h  SideAttack.c  SideAttack.h
src/core/: AssetsPath.c  AssetsPath.h  Config.h  Engine.c  Engine.h  SoundManager.c  SoundManager.h  TextureManager.c  TextureManager.h  main.c
src/core/GameObjects/: AnimatedSprite.c  AnimatedSprite.h  Animation.c  Animation.h  BitmapChar.c  BitmapChar.h  BitmapFont.c  BitmapFont.h  BitmapText.c  BitmapText.h  GameObject.c  GameObject.h  GameObjects.h  Image.c  Image.h  PhysicsBody.c  PhysicsBody.h  Solid.c  Solid.h  Sprite.c  Sprite.h  Structs.h
